--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head><title>Ali Parsa's Website</title>
 
 <meta http-equiv="Content-Type" content="text/html;	charset=utf-8"><meta name="Author" content="Ali	Parsa"><meta content="Pictures	and	text	about	my	interests" name="description"><meta content="Iran,Ali	Parsa,desert,Rig-e	Jenn,brno,persian	mauser,damavand	poppy,birdwatching	iran,bultaco,cheetah,eclipse,nepal,science	museum,	shipwreck,	miankaleh" name="keywords"><meta name="ROBOTS" content="INDEX,FOLLOW"></head><body alink="#ff0000" bgcolor="#ffffcc" link="#0000ee" text="#000000" vlink="#551a8b"><font face="Arial,	Helvetica"><br><table bgcolor="#ffff99" border="0" width="800">	<caption>	<br>
-</caption><tbody></tbody>	<tbody>	<tr><td nowrap="nowrap"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/africa/africa.html">Africa</a></font></font>
+</caption><tbody></tbody>	<tbody>	<tr><td nowrap="nowrap"><font color="#330033"><font size="-1"><a href="./africa/africa.html">Africa</a></font></font>
 <br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/usa/usa.html">America</a></font></font><img alt="new symbol" src="new.gif">
 <br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/bakhtiari/bakhtiari.html">Bakhtiari</a></font></font><br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/birds/birds.html">Birdwatching</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/brno/brno.html">Brno</a></font></font>
 	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/bultaco/bultaco.html">Bultaco	Restoration</a></font></font>	
