--- a/index.html
+++ b/index.html
@@ -1,17 +1,77 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD	HTML	4.0	Transitional//EN">
-<html><head><title>Ali Parsa's Website</title>
+<html>
+<head><meta charset="utf-8">
+	<title>Ali Parsa&#39;s Website</title>
+	<meta name="Author" content="Ali	Parsa"><meta content="Pictures	and	text	about	my	interests" name="description"><meta content="Iran,Ali	Parsa,desert,Rig-e	Jenn,brno,persian	mauser,damavand	poppy,birdwatching	iran,bultaco,cheetah,eclipse,nepal,science	museum,	shipwreck,	miankaleh" name="keywords"><meta name="ROBOTS" content="INDEX,FOLLOW">
+</head>
+<body alink="#ff0000" bgcolor="#ffffcc" link="#0000ee" text="#000000" vlink="#551a8b">
+<p></p>
 
-<meta http-equiv="Content-Type" content="text/html;	charset=utf-8"><meta name="Author" content="Ali	Parsa"><meta content="Pictures	and	text	about	my	interests" name="description"><meta content="Iran,Ali	Parsa,desert,Rig-e	Jenn,brno,persian	mauser,damavand	poppy,birdwatching	iran,bultaco,cheetah,eclipse,nepal,science	museum,	shipwreck,	miankaleh" name="keywords"><meta name="ROBOTS" content="INDEX,FOLLOW"></head><body alink="#ff0000" bgcolor="#ffffcc" link="#0000ee" text="#000000" vlink="#551a8b"><font face="Arial,	Helvetica"><br><table bgcolor="#ffff99" border="0" width="800">	<caption>	<br>
-</caption><tbody></tbody>	<tbody>	<tr><td nowrap="nowrap"><font color="#330033"><font size="-1"><a href="./africa/africa.html">Africa</a></font></font>
-<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/usa/usa.html">America</a></font></font><img alt="new symbol" src="new.gif">
-<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/bakhtiari/bakhtiari.html">Bakhtiari</a></font></font><br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/birds/birds.html">Birdwatching</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/brno/brno.html">Brno</a></font></font>
-	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/bultaco/bultaco.html">Bultaco	Restoration</a></font></font>	
-<br><font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/canada/canada.html">Canada</a></font></font></font><br><font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/cancer/cancer.html">Cancer</a></font></font></font>
-<br><font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/centralamerica/centralamerica.html">Central	America</a></font></font></font><br><font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/cheetah/cheetah.html">Cheetah</a></font></font></font>	<br><font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/dinosaur/dinosaur.html">Dinosaur?</a></font></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/eclipse/eclipse.html">Eclipse'99</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/europe09/europe09.html">Europe	'09</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/flight/flight.html">Flight</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/herat/herat.html">Herat</a></font></font><br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/jazz/jazz.html">Jazz</a></font></font><a href="http://www.aliparsa.com/jazz/jazz.html"><font face="Arial,	Helvetica"></font></a><font color="#330033"><font size="-1"><br>
-<a href="http://www.aliparsa.com/malaysia/malaysia.html">Malaysia</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/nepal/nepal.html">Nepal</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/pacificsailing/pacificsailing.html">Pacific	Sailing</a></font></font><br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/persiangulfsailing/persiangulfsailing.pdf">Persian	Gulf	Sailing</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/personal/personal.html">Personal</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/poppy/poppy.html">	Poppy</a></font></font><br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/rafting/rafting.html">Rafting	</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/rig/rig.html">Rig-e	Jenn	</a></font></font><br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/sailing/sailing.html">Sailing</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/science/science.html">Science	Museum</a></font></font><br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/shipwreck/ship.html">Shipwreck</a></font></font><br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/southiran/southiran.html">South	Iran</a></font></font>	<br><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/turkey/turkey.html">Turkey</a></font></font></td><td>
+<table bgcolor="#ffff99" border="0" width="800">
+	<caption></caption>
+	<tbody>
+	</tbody>
+	<tbody>
+		<tr>
+			<td nowrap="nowrap"><font face="Arial,	Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/africa/africa.html">Africa</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/usa/usa.html">America</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/bakhtiari/bakhtiari.html">Bakhtiari</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/birds/birds.html">Birdwatching</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/brno/brno.html">Brno</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/bultaco/bultaco.html">Bultaco Restoration</a></font></font><br />
+			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/canada/canada.html">Canada</a></font></font></font><br />
+			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/cancer/cancer.html">Cancer</a></font></font></font><br />
+			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/centralamerica/centralamerica.html">Central America</a></font></font></font><br />
+			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/cheetah/cheetah.html">Cheetah</a></font></font></font><br />
+			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/dinosaur/dinosaur.html">Dinosaur?</a></font></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/eclipse/eclipse.html">Eclipse&#39;99</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/europe09/europe09.html">Europe &#39;09</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/flight/flight.html">Flight</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/herat/herat.html">Herat</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/jazz/jazz.html">Jazz</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/malaysia/malaysia.html">Malaysia</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/nepal/nepal.html">Nepal</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/pacificsailing/pacificsailing.html">Pacific Sailing</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/persiangulfsailing/persiangulfsailing.pdf">Persian Gulf Sailing</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/personal/personal.html">Personal</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/poppy/poppy.html">Poppy</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/rafting/rafting.html">Rafting </a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/rig/rig.html">Rig-e Jenn </a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/sailing/sailing.html">Sailing</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/science/science.html">Science Museum</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/shipwreck/ship.html">Shipwreck</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/southiran/southiran.html">South Iran</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/turkey/turkey.html">Turkey</a></font></font></font></td>
+			<td>
+			<p align="center"><font face="Arial,	Helvetica"><font color="#9f0000" size="+2">علی پارسا</font> </font></p>
 
-	<p align="center"><font color="#9f0000" size="+2">علی	پارسا</font>	</p><p align="center"><font color="#9f0000" size="+3"><b>Ali	Parsa's	Web	site</b></font>	</p><p align="center"><img alt="compass" src="compass.jpg">
-</p><p>Updating US pages.<br>
-</p></td></tr></tbody></table></font><center><p><font face="Arial,	Helvetica"><img src="http://www.aliparsa.com/email.gif" height="29" width="187">	</font></p><p><font face="Arial,	Helvetica"><font face="arial"><font color="#666666"><font size="1">Copyright	©	Ali	Parsa	1998-2020	<br>All	rights	reserved</font></font></font>	</font></p></center>
+			<p align="center"><font face="Arial,	Helvetica"><font color="#9f0000" size="+3"><b>Ali Parsa&#39;s Web site</b></font> </font></p>
 
-<font face="Arial,	Helvetica"><script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script><script type="text/javascript">_uacct	=	"UA-2508120-1";urchinTracker();</script></font></body></html>
+			<p align="center"><font face="Arial,	Helvetica"><img alt="compass" src="compass.jpg" /> </font></p>
+
+			<p></p>
+
+			<center><br />
+			<font face="Arial,	Helvetica">Read a sample chapter of my book<img alt="new symbol" src="new.gif" /><br />
+			<a href="http://www.aliparsa.com/بادبان‌های جنوب/ch2.pdf"><font size="+1"><font color="#0000FF">بادبان&zwnj;های جنوب </font></font></a><br />
+			<font size="-1">in Persian<br />
+			PDF format</font></font></center>
+
+			<p style="text-align: center;"><span style="font-family:arial,helvetica,sans-serif;">More Chapters to come soon.</span></p>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+<p></p>
+
+<center>
+<p><font face="Arial,	Helvetica"><img height="29" src="http://www.aliparsa.com/email.gif" width="187" /> </font></p>
+
+<p><font face="Arial,	Helvetica"><font face="arial"><font color="#666666"><font size="1">Copyright &copy; Ali Parsa 1998-2020<br />
+All rights reserved</font></font></font> </font></p>
+</center>
+
+<p><font face="Arial,	Helvetica"><script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script><script type="text/javascript">_uacct	=	"UA-2508120-1";urchinTracker();</script></font></p>
+</body>
+</html>
