modified index america

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<tbody>
 		<tr>
 			<td nowrap="nowrap"><font face="Arial,	Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/africa/africa.html">Africa</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/usa/usa.html">America</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="usa/usa.html">America</a></font></font><br />
 			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/bakhtiari/bakhtiari.html">Bakhtiari</a></font></font><br />
 			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/birds/birds.html">Birdwatching</a></font></font><br />
 			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/brno/brno.html">Brno</a></font></font><br />
