--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</tbody>
 	<tbody>
 		<tr>
-			<td nowrap="nowrap"><font face="Arial,	Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/africa/africa.html">Africa</a></font></font><br />
+			<td nowrap="nowrap"><font face="Arial,	Helvetica"><font color="#330033"><font size="-1"><a href="africa/africa.html">Africa</a></font></font><br />
 			<font color="#330033"><font size="-1"><a href="usa/usa.html">America</a></font></font><br />
 			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/bakhtiari/bakhtiari.html">Bakhtiari</a></font></font><br />
 			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/birds/birds.html">Birdwatching</a></font></font><br />
