--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
 		<tr>
 			<td nowrap="nowrap"><font face="Arial,	Helvetica"><font color="#330033"><font size="-1"><a href="africa/africa.html">Africa</a></font></font><br />
 			<font color="#330033"><font size="-1"><a href="usa/usa.html">America</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/bakhtiari/bakhtiari.html">Bakhtiari</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/birds/birds.html">Birdwatching</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/brno/brno.html">Brno</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/bultaco/bultaco.html">Bultaco Restoration</a></font></font><br />
-			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/canada/canada.html">Canada</a></font></font></font><br />
-			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/cancer/cancer.html">Cancer</a></font></font></font><br />
-			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/centralamerica/centralamerica.html">Central America</a></font></font></font><br />
-			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/cheetah/cheetah.html">Cheetah</a></font></font></font><br />
-			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/dinosaur/dinosaur.html">Dinosaur?</a></font></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/eclipse/eclipse.html">Eclipse&#39;99</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/europe09/europe09.html">Europe &#39;09</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/flight/flight.html">Flight</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/herat/herat.html">Herat</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/jazz/jazz.html">Jazz</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/malaysia/malaysia.html">Malaysia</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/nepal/nepal.html">Nepal</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/pacificsailing/pacificsailing.html">Pacific Sailing</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/persiangulfsailing/persiangulfsailing.pdf">Persian Gulf Sailing</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/personal/personal.html">Personal</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/poppy/poppy.html">Poppy</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/rafting/rafting.html">Rafting </a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/rig/rig.html">Rig-e Jenn </a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/sailing/sailing.html">Sailing</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/science/science.html">Science Museum</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/shipwreck/ship.html">Shipwreck</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/southiran/southiran.html">South Iran</a></font></font><br />
-			<font color="#330033"><font size="-1"><a href="http://www.aliparsa.com/turkey/turkey.html">Turkey</a></font></font></font></td>
+			<font color="#330033"><font size="-1"><a href="bakhtiari/bakhtiari.html">Bakhtiari</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="birds/birds.html">Birdwatching</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="brno/brno.html">Brno</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="bultaco/bultaco.html">Bultaco Restoration</a></font></font><br />
+			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="canada/canada.html">Canada</a></font></font></font><br />
+			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="cancer/cancer.html">Cancer</a></font></font></font><br />
+			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="centralamerica/centralamerica.html">Central America</a></font></font></font><br />
+			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="cheetah/cheetah.html">Cheetah</a></font></font></font><br />
+			<font face="Arial,Helvetica"><font color="#330033"><font size="-1"><a href="dinosaur/dinosaur.html">Dinosaur?</a></font></font></font><br />
+			<font color="#330033"><font size="-1"><a href="eclipse/eclipse.html">Eclipse&#39;99</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="europe09/europe09.html">Europe &#39;09</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="flight/flight.html">Flight</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="herat/herat.html">Herat</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="jazz/jazz.html">Jazz</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="malaysia/malaysia.html">Malaysia</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="nepal/nepal.html">Nepal</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="pacificsailing/pacificsailing.html">Pacific Sailing</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="persiangulfsailing/persiangulfsailing.pdf">Persian Gulf Sailing</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="personal/personal.html">Personal</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="poppy/poppy.html">Poppy</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="rafting/rafting.html">Rafting </a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="rig/rig.html">Rig-e Jenn </a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="sailing/sailing.html">Sailing</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="science/science.html">Science Museum</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="shipwreck/ship.html">Shipwreck</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="southiran/southiran.html">South Iran</a></font></font><br />
+			<font color="#330033"><font size="-1"><a href="turkey/turkey.html">Turkey</a></font></font></font></td>
 			<td>
 			<p align="center"><font face="Arial,	Helvetica"><font color="#9f0000" size="+2">علی پارسا</font> </font></p>
 
@@ -53,7 +53,7 @@
 
 			<center><br />
 			<font face="Arial,	Helvetica">Read a sample chapter of my book<img alt="new symbol" src="new.gif" /><br />
-			<a href="http://www.aliparsa.com/بادبان‌های جنوب/ch2.pdf"><font size="+1"><font color="#0000FF">بادبان&zwnj;های جنوب </font></font></a><br />
+			<a href="بادبان‌های جنوب/ch2.pdf"><font size="+1"><font color="#0000FF">بادبان&zwnj;های جنوب </font></font></a><br />
 			<font size="-1">in Persian<br />
 			PDF format</font></font></center>
 
@@ -66,7 +66,7 @@
 <p></p>
 
 <center>
-<p><font face="Arial,	Helvetica"><img height="29" src="http://www.aliparsa.com/email.gif" width="187" /> </font></p>
+<p><font face="Arial,	Helvetica"><img height="29" src="email.gif" width="187" /> </font></p>
 
 <p><font face="Arial,	Helvetica"><font face="arial"><font color="#666666"><font size="1">Copyright &copy; Ali Parsa 1998-2020<br />
 All rights reserved</font></font></font> </font></p>
