--- a/brno/brno.html
+++ b/brno/brno.html
@@ -1,7 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html><head><title>Persian Mauser</title>
 
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="Author" content="Ali Parsa"><meta content="A brief introduction to Persian Mauser rifle" name="description"><meta name="ROBOTS" content="INDEX,FOLLOW"><meta name="keywords" content="Persian Mauser,rifle,Brno rifle, Mauser, mauser 98"></head><body lang="EN-US"><font face="Arial, Helvetica"></font><p><font face="Arial, Helvetica"><font size="+2"><b>A Piece of History</b><br>Brno, the Persian Mauser</font></font></p><center><font face="Arial, Helvetica"><script type="text/javascript"><!--google_ad_client = "pub-3299379293046999";/* Brno page 125x125, created 1/28/09 */google_ad_slot = "8775901313";google_ad_width = 125;google_ad_height = 125;//--></script></font></center><p><font face="Arial, Helvetica">Hollywood
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="Author" content="Ali Parsa"><meta content="A brief introduction to Persian Mauser rifle" name="description"><meta name="ROBOTS" content="INDEX,FOLLOW"><meta name="keywords" content="Persian Mauser,rifle,Brno rifle, Mauser, mauser 98">
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3299379293046999"
+     crossorigin="anonymous"></script>
+
+
+</head><body lang="EN-US"><font face="Arial, Helvetica"></font><p><font face="Arial, Helvetica"><font size="+2"><b>A Piece of History</b><br>Brno, the Persian Mauser</font></font></p><center><font face="Arial, Helvetica"><script type="text/javascript"><!--google_ad_client = "pub-3299379293046999";/* Brno page 125x125, created 1/28/09 */google_ad_slot = "8775901313";google_ad_width = 125;google_ad_height = 125;//--></script></font></center><p><font face="Arial, Helvetica">Hollywood
 WWII movie buffs know that in such movies while the American guy uses a
 slick machine gun, the unlucky German soldiers carry a long, clumsy
 rifle, and usually are either killed before being able to use it or
