--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD	HTML	4.0	Transitional//EN">
 <html>
-<head><meta charset="utf-8">
+<head>
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3299379293046999"
+     crossorigin="anonymous"></script>
+
+
+
+	<meta charset="utf-8">
 	<title>Ali Parsa&#39;s Website</title>
 	<meta name="Author" content="Ali	Parsa"><meta content="Pictures	and	text	about	my	interests" name="description"><meta content="Iran,Ali	Parsa,desert,Rig-e	Jenn,brno,persian	mauser,damavand	poppy,birdwatching	iran,bultaco,cheetah,eclipse,nepal,science	museum,	shipwreck,	miankaleh" name="keywords"><meta name="ROBOTS" content="INDEX,FOLLOW">
 </head>
