--- a/birds/cranes.html
+++ b/birds/cranes.html
@@ -1,4 +1,20 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><TITLE>Ali Parsa's Cranes Page</TITLE>    <META http-equiv=Content-Type content="text/html; charset=utf-8"><META name="Author" content="Ali Parsa"><META content="Siberian White Cranes spotted in Eastern Iran by Ali Parsa" name=description><META content="cranes, siberian crane, birdwatching,birding,Iran" name="keywords"><META name="ROBOTS" content="INDEX,FOLLOW"></HEAD><BODY bgColor=#ffffcc><P align=center><FONT face=Persian color=#3333ff size=+3>درنای سيبری در شرق ايران</FONT> <FONT face="Arial, Helvetica"><P align="CENTER"><FONT color=#3333ff size=+3>Siberian White Crane</FONT><p align=center>In 1994 we traveled to eastern Iran, near the border with Afghanistan, to verify a report by the Internation Crane Fund concerning a radio signal from a transmitter previously mounted on a Siberian Crane coming from that area.
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><TITLE>Ali Parsa's Cranes Page</TITLE>
+   
+   
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>
+   
+   
+   
+   
+   <META http-equiv=Content-Type content="text/html; charset=utf-8"><META name="Author" content="Ali Parsa"><META content="Siberian White Cranes spotted in Eastern Iran by Ali Parsa" name=description><META content="cranes, siberian crane, birdwatching,birding,Iran" name="keywords"><META name="ROBOTS" content="INDEX,FOLLOW"></HEAD><BODY bgColor=#ffffcc><P align=center><FONT face=Persian color=#3333ff size=+3>درنای سيبری در شرق ايران</FONT> <FONT face="Arial, Helvetica"><P align="CENTER"><FONT color=#3333ff size=+3>Siberian White Crane</FONT><p align=center>In 1994 we traveled to eastern Iran, near the border with Afghanistan, to verify a report by the Internation Crane Fund concerning a radio signal from a transmitter previously mounted on a Siberian Crane coming from that area.
 <p align=center><img src="capitane2.jpg">
 <p align=center>We were accompaned by Mr. Shamlu of Torbat Heydarieh Environmental Protection Organization, and his Kurdish colleague whom I named our "Capitane", refering to 'Dersu Uzala' who in the great film of Kurosava used to address his superior this way. Our Dersu used to call us Agha-y Mohandes (Mr. Engineer.) 
 
