--- a/birds/iranbirds.html
+++ b/birds/iranbirds.html
@@ -3,7 +3,23 @@
 <HTML xmlns="http://www.w3.org/TR/REC-html40" xmlns:v = 
 "urn:schemas-microsoft-com:vml" xmlns:o = 
 "urn:schemas-microsoft-com:office:office" xmlns:w = 
-"urn:schemas-microsoft-com:office:word"><HEAD><TITLE>General Information:</TITLE>
+"urn:schemas-microsoft-com:office:word"><HEAD>
+	
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>
+	
+	
+	
+	
+	
+	<TITLE>General Information:</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=windows-1252">
 <META content=Word.Document name=ProgId>
 <META content="MSHTML 6.00.2800.1276" name=GENERATOR>
@@ -73,7 +89,7 @@ bgColor=#ffffcc>
 <H2>Birding in Iran</H2>
 <P class=MsoNormal><![if !supportEmptyParas]><![endif]>&nbsp;<o:p></o:p></P>
 <P class=MsoNormal>Iran (formerly known as Persia), with a land area of 
-1,648,184 km², borders Iraq, Turkey, Armenia, Azerbaijan, Turkmenistan, 
+1,648,184 kmÂ², borders Iraq, Turkey, Armenia, Azerbaijan, Turkmenistan, 
 Afghanistan and Pakistan. The country has over 2,000 km of coastline in its 
 southern region, along the Persian Gulf, Strait of Hormuz and the Gulf of 
 Oman.</P>
@@ -141,7 +157,7 @@ style="COLOR: black">Black-headed Bunting</SPAN></B><SPAN style="COLOR: black">
 <P class=MsoNormal><![if !supportEmptyParas]><![endif]>&nbsp;<o:p></o:p></P>
 <H1>High mountains</H1>
 <P class=MsoNormal><![if !supportEmptyParas]><![endif]>&nbsp;<o:p></o:p></P>
-<P class=MsoNormal>Iran’s two major mountain ranges Alborz and Zagros, and the 
+<P class=MsoNormal>Iranâ€™s two major mountain ranges Alborz and Zagros, and the 
 higher peaks of ranges in Azerbaijan, Khorasan, Kerman and Baluchistan provinces 
 have fauna typical of all high mountain ranges of Western Europe to the 
 Himalayas. Species include <B><SPAN 
