--- a/birds/pleske.html
+++ b/birds/pleske.html
@@ -2,6 +2,21 @@
 
 <HTML>
 <HEAD>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>  
+  
+  
+  
+  
+  
 <TITLE>Pleske Ground Jay</TITLE>
 
 <META http-equiv=Content-Language content=en-us>
