--- a/personal/family/parvinghadimi/parvinghadimi.htm
+++ b/personal/family/parvinghadimi/parvinghadimi.htm
@@ -1,6 +1,15 @@
 <html><head>
 
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-BZHWMNSR6X');
+</script>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="keywords" content="Parvin Ghadimi, Parvin Parsa, Iran, Behnia, Ghadimi, Ghadimi Navaii">
@@ -39,7 +48,7 @@
 this site for my late mother, Parvin Ghadimi-Parsa. It includes
 information about her life using photos from her personal albums. You
 can reach me by email at:<br> <img src="email.gif">
-<br>Copyright © <a href="http://www.aliparsa.com/">Ali Parsa</a> 2004</font></p></center>
+<br>Copyright Â© <a href="http://www.aliparsa.com/">Ali Parsa</a> 2004</font></p></center>
 
 </td>
   </tr>
