--- a/personal/family/parvinghadimi/childhood/childhood.html
+++ b/personal/family/parvinghadimi/childhood/childhood.html
@@ -1,6 +1,19 @@
 <html><head>
 
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>
+  
+  
+  
+  
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="keywords" content="Parvin Ghadimi, Parvin Parsa, Iran, Behnia, Ghadimi, Ghadimi Navaii">
