--- a/personal/family/asghar_p/parliament/us.html
+++ b/personal/family/asghar_p/parliament/us.html
@@ -1,7 +1,14 @@
 <html><head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-
+  gtag('config', 'G-BZHWMNSR6X');
+</script>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title>Asghar Parsa in the US</title>
