--- a/rig/rigsecond.html
+++ b/rig/rigsecond.html
@@ -2,6 +2,19 @@
 
 <HTML>
 <HEAD>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>  
+
+  
+  
 <TITLE>Second Trip to Rig-e Jenn</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=utf-8">
 <META content="MSHTML 6.00.2800.1276" name=GENERATOR>
