--- a/rig/rigeighth.html
+++ b/rig/rigeighth.html
@@ -1,6 +1,21 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
-<HTML><HEAD><TITLE>Eighth Trip to Rig-e Jenn</TITLE>
+<HTML><HEAD>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>  
+
+  
+  
+  
+  <TITLE>Eighth Trip to Rig-e Jenn</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=utf-8">
 <META content="Pictures and text about Rig-e Jenn in Iran's Dasht-e Kavir." 
 name=description>
