--- a/rig/groebli.html
+++ b/rig/groebli.html
@@ -2,6 +2,20 @@
 <!-- saved from url=(0055)http://www.geocities.com/aliparsa/rigejenn/groebli.html -->
 <HTML>
 <HEAD>
+  
+  
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>  
+  
+  
+  
 <TITLE>Satellite picture of Rig-e Jenn</TITLE>
 <META http-equiv=Content-Language content=en-us>
 <META http-equiv=Content-Type content="text/html; charset=utf-8">
