--- a/science/sjmercury/2-08-2001.html
+++ b/science/sjmercury/2-08-2001.html
@@ -3,6 +3,18 @@
 <!-- saved from url=(0069)http://www0.mercurycenter.com/svtech/news/indepth/docs/iran020901.htm -->
 <HTML>
 <HEAD>
+	
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>  
+
+	
 <TITLE>Iranian computer consultant is a man on a mission (2/08/2001)</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=windows-1252">
 <META content=034292 name=docid>
@@ -154,16 +166,16 @@ topMargin=3 MARGINWIDTH="3" MARGINHEIGHT="3">
           <TD noWrap width="97%" bgColor=#ffffff><FONT size=1>&nbsp;<A 
             href="http://www0.mercurycenter.com/svtech/news/breaking/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" size=2>Breaking 
-            News</FONT></A><BR>&nbsp;&nbsp;• <A 
+            News</FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/news/breaking/merc/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" size=1>Latest 
-            Headlines</FONT></A><BR>&nbsp;&nbsp;• <A 
+            Headlines</FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/news/breaking/ap/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" size=1>AP 
-            Technology</FONT></A><BR>&nbsp;&nbsp;• <A 
+            Technology</FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/news/breaking/reuters/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" size=1>Reuters 
-            Technology</FONT></A><BR>&nbsp;&nbsp;• <A 
+            Technology</FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/news/breaking/internet/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" size=1>Reuters 
             Internet</FONT></A><BR>&nbsp;<A 
@@ -226,7 +238,7 @@ topMargin=3 MARGINWIDTH="3" MARGINHEIGHT="3">
           <TD noWrap width="97%" bgColor=#336699><FONT size=1>&nbsp;<A 
             href="http://weblog.mercurycenter.com/ejournal/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" color=#cceeff size=2>Dan 
-            Gillmor/eJournal </FONT></A><BR>&nbsp;&nbsp;• <A 
+            Gillmor/eJournal </FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/columns/gillmor/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" color=#cceeff size=1>Dan 
             Gillmor/Column</FONT></A><BR>&nbsp;<A 
@@ -303,22 +315,22 @@ topMargin=3 MARGINWIDTH="3" MARGINHEIGHT="3">
             Survey</FONT></A><BR>&nbsp;<A 
             href="http://www0.mercurycenter.com/svtech/companies/watch/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" color=#cceeff size=2>Company 
-            Watch</FONT></A><BR>&nbsp;&nbsp;• <A 
+            Watch</FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/companies/watch/apple/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" color=#cceeff 
-            size=1>Apple</FONT></A><BR>&nbsp;&nbsp;• <A 
+            size=1>Apple</FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/companies/watch/cisco/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" color=#cceeff 
-            size=1>Cisco</FONT></A><BR>&nbsp;&nbsp;• <A 
+            size=1>Cisco</FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/companies/watch/hp/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" color=#cceeff 
-            size=1>HP</FONT></A><BR>&nbsp;&nbsp;• <A 
+            size=1>HP</FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/companies/watch/intel/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" color=#cceeff 
-            size=1>Intel</FONT></A><BR>&nbsp;&nbsp;• <A 
+            size=1>Intel</FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/companies/watch/microsoft/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" color=#cceeff 
-            size=1>Microsoft</FONT></A><BR>&nbsp;&nbsp;• <A 
+            size=1>Microsoft</FONT></A><BR>&nbsp;&nbsp;â€¢ <A 
             href="http://www0.mercurycenter.com/svtech/companies/watch/sun/"><FONT 
             face="TREBUCHET MS,ARIAL,HELVETICA" color=#cceeff 
             size=1>Sun</FONT></A><BR><A 
@@ -618,7 +630,7 @@ NEWSLIBRARY SEARCH=NDS HERE-->
           </TD>
           <TD vAlign=top align=left width="2%" bgColor=#dddddd>&nbsp; </TD>
           <TD align=left width="77%" bgColor=#dddddd><FONT 
-            face="TREBUCHET MS,ARIAL,HELVETICA" size=1>© 2001 SiliconValley.com. 
+            face="TREBUCHET MS,ARIAL,HELVETICA" size=1>Â© 2001 SiliconValley.com. 
             The information you receive online from SiliconValley.com is 
             protected by the copyright laws of the United States. The copyright 
             laws prohibit any copying, redistributing, retransmitting, or 
