--- a/southiran/bastakkukherd.html
+++ b/southiran/bastakkukherd.html
@@ -5,6 +5,18 @@
 
 <HEAD>
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>  
+ 
+ 
+ 
 <TITLE>Bastak and Kukherd</TITLE>    
 
 <META http-equiv=Content-Type content="text/html; charset=utf-8">
