--- a/usa/usa.html
+++ b/usa/usa.html
@@ -1,4 +1,17 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><TITLE>In America</TITLE>    <META http-equiv=Content-Type content="text/html; charset=utf-8"><META name="Author" content="Ali Parsa"><META content="Pictures and text about my USA experience." name=description><META content="Ali parsa, America, Sun Valley, Idaho, San Francisco, SIP, San Diego, Denver, Lockheed-Martin, Yosemite" name=keywords><META name="ROBOTS" content="INDEX,FOLLOW"></HEAD><BODY text=#000000 vLink=#551a8b aLink=#ff0000 link=#0000ee bgColor=#ffffcc><font face="Arial, Helvetica"><CENTER><B><FONT color=#cc0000>My Days in</FONT></B> <BR><B><FONT size=+3><FONT color=#3333ff>A</FONT><FONT color=#cc0000>merica</FONT></FONT></B> </CENTER>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD>
+  
+  
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>    
+  
+  <TITLE>In America</TITLE>    <META http-equiv=Content-Type content="text/html; charset=utf-8"><META name="Author" content="Ali Parsa"><META content="Pictures and text about my USA experience." name=description><META content="Ali parsa, America, Sun Valley, Idaho, San Francisco, SIP, San Diego, Denver, Lockheed-Martin, Yosemite" name=keywords><META name="ROBOTS" content="INDEX,FOLLOW"></HEAD><BODY text=#000000 vLink=#551a8b aLink=#ff0000 link=#0000ee bgColor=#ffffcc><font face="Arial, Helvetica"><CENTER><B><FONT color=#cc0000>My Days in</FONT></B> <BR><B><FONT size=+3><FONT color=#3333ff>A</FONT><FONT color=#cc0000>merica</FONT></FONT></B> </CENTER>
 
 I first went to the US as a student of computer science in 1976. I joined Shahrzad who was at the time a student of Industrial engineering at Stanford. I was going to USF. I graduated and then started my studies at San Jose State U. We went back to Iran in 1979.
 
