--- a/usa/sciencetrip/sciencetrip.html
+++ b/usa/sciencetrip/sciencetrip.html
@@ -2,6 +2,17 @@
 
 <HTML>
 <HEAD>
+  
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BZHWMNSR6X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BZHWMNSR6X');
+</script>    
+  
 <TITLE>Science Trip</TITLE>    
 <META http-equiv=Content-Type content="text/html; charset=utf-8">
 <META name="Author" content="Ali Parsa">
