--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 			PDF format</font></font></center>
 
 			<p style="text-align: center;"><span style="font-family:arial,helvetica,sans-serif;">More Chapters to come soon.</span></p>
+			
+			<p <a href="https://www.youtube.com/watch?v=NO69TFMRpg8&list=PLw0pwLV8z_H8eyGVP1PNLc2DcoXm7paQ1&index=2"></a>			
+			
 			</td>
 		</tr>
 	</tbody>
