--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 			<p style="text-align: center;"><span style="font-family:arial,helvetica,sans-serif;">More Chapters to come soon.</span></p>
 			
-			<p style="text-align: center;"><span style="font-family:arial,helvetica,sans-serif;"><a href="https://www.youtube.com/watch?v=NO69TFMRpg8&list=PLw0pwLV8z_H8eyGVP1PNLc2DcoXm7paQ1&index=2" See my talks about traditional sailing in Iran on YouTube (in Persian)></a></p>			
+			<p style="text-align: center;"><span style="font-family:arial,helvetica,sans-serif;"><a href="https://www.youtube.com/watch?v=NO69TFMRpg8&list=PLw0pwLV8z_H8eyGVP1PNLc2DcoXm7paQ1&index=2"> See my talks about traditional sailing in Iran on YouTube (in Persian)</a></p>			
 			
 			</td>
 		</tr>
