--- a/brno/brno.html
+++ b/brno/brno.html
@@ -118,7 +118,7 @@ the gun of a poor gendarme who was aiming at her at a long distance.
 Its popularity among Iranian tribes was so much that it was mentioned
 in some of their songs. A version of a well-known Boyer Ahmad song has
 a refrain that says "Mastom, Mastom, Brno kootah be dastom" (I'm drunk
-and have a short Brno in my hand).</font></p><p><font face="Arial, Helvetica">For
+and have a short Brno in my hand). In some tribal areas of Iran some poeple even named their daughter 'Brno", to suggest that she is as sublime and good as a Brno rifle.</font></p><p><font face="Arial, Helvetica">For
 the politically minded intellectuals of 1950s nad 1960s, the rifle was
 a symbol of the shah's repressive rule. It can be seen in the pictures
 of soldiers attacking house of Dr. Mossageq on the fateful day of 19
