--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<p></p>
 
 			<center><br />
-			<font face="Arial,	Helvetica">Read a sample chapter of my book<img alt="new symbol" src="new.gif" /><br />
+			<font face="Arial,	Helvetica">My book<img alt="new symbol" src="new.gif" /><br />
 			<a href="بادبان‌های جنوب/ch2.pdf"><font size="+1"><font color="#0000FF">بادبان&zwnj;های جنوب </font></font></a><br />
 			<font size="-1">in Persian<br />
 			PDF format</font></font></center>
