added link to internet archive

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 			<center><br />
 			<font face="Arial,	Helvetica">My book<img alt="new symbol" src="new.gif" /><br />
-			<a href="بادبان‌های جنوب/<a href="https://archive.org/details/1_20231211_20231211"><font size="+1"><font color="#0000FF">بادبان&zwnj;های جنوب </font></font></a><br />
+			<a href="بادبان‌های جنوب/https://archive.org/details/1_20231211_20231211><font size="+1"><font color="#0000FF">بادبان&zwnj;های جنوب </font></font></a><br />
 			<font size="-1">in Persian<br />
 			PDF format</font></font></center>
 
