upload edited index file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD	HTML	4.0	Transitional//EN">
 <html>
-<head><meta charset="utf-8">
+<head>
+
+	<meta charset="utf-8">
 	<title>Ali Parsa&#39;s Website</title>
 	<meta name="Author" content="Ali	Parsa"><meta content="Pictures	and	text	about	my	interests" name="description"><meta content="Iran,Ali	Parsa,desert,Rig-e	Jenn,brno,persian	mauser,damavand	poppy,birdwatching	iran,bultaco,cheetah,eclipse,nepal,science	museum,	shipwreck,	miankaleh" name="keywords"><meta name="ROBOTS" content="INDEX,FOLLOW">
 </head>
 <body alink="#ff0000" bgcolor="#ffffcc" link="#0000ee" text="#000000" vlink="#551a8b">
-<p></p>
+	
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3299379293046999"
+     crossorigin="anonymous"></script><p></p>
 
 <table bgcolor="#ffff99" border="0" width="800">
 	<caption></caption>
@@ -52,12 +56,15 @@
 			<p></p>
 
 			<center><br />
-			<font face="Arial,	Helvetica">Read a sample chapter of my book<img alt="new symbol" src="new.gif" /><br />
-			<a href="بادبان‌های جنوب/ch2.pdf"><font size="+1"><font color="#0000FF">بادبان&zwnj;های جنوب </font></font></a><br />
+			<font face="Arial,	Helvetica">My book<img alt="new symbol" src="new.gif" /><br />
+			<a href="بادبان‌های جنوب/https://archive.org/details/badban"><font size="+1"><font color="#0000FF">بادبان&zwnj;های جنوب </font></font></a><br />
 			<font size="-1">in Persian<br />
 			PDF format</font></font></center>
 
 			<p style="text-align: center;"><span style="font-family:arial,helvetica,sans-serif;">More Chapters to come soon.</span></p>
+			
+			<p style="text-align: center;"><span style="font-family:arial,helvetica,sans-serif;"><a href="https://www.youtube.com/watch?v=NO69TFMRpg8&list=PLw0pwLV8z_H8eyGVP1PNLc2DcoXm7paQ1&index=2"> See my talks about traditional sailing in Iran on YouTube (in Persian)</a></p>			
+			
 			</td>
 		</tr>
 	</tbody>
@@ -68,7 +75,7 @@
 <center>
 <p><font face="Arial,	Helvetica"><img height="29" src="email.gif" width="187" /> </font></p>
 
-<p><font face="Arial,	Helvetica"><font face="arial"><font color="#666666"><font size="1">Copyright &copy; Ali Parsa 1998-2020<br />
+<p><font face="Arial,	Helvetica"><font face="arial"><font color="#666666"><font size="1">Copyright &copy; Ali Parsa 1998-2023<br />
 All rights reserved</font></font></font> </font></p>
 </center>
 
