--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 			<center><br />
 			<font face="Arial,	Helvetica">My book<img alt="new symbol" src="new.gif" /><br />
-<<<<<<< HEAD
-			<a href="/https://archive.org/details/badban"><font size="+1"><font color="#0000FF">بادبان&zwnj;های جنوب </font></font></a><br />
+
+			<a href="https://archive.org/details/badban"><font size="+1"><font color="#0000FF">بادبان&zwnj;های جنوب </font></font></a><br />
 
 
 			<font size="-1">in Persian<br />
