--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<font size="-1">in Persian<br />
 			PDF format</font></font></center>
 
-			<p style="text-align: center;"><span style="font-family:arial,helvetica,sans-serif;">More Chapters to come soon.</span></p>
+			<p style="text-align: center;"><span style="font-family:arial,helvetica,sans-serif;">Please send your comments and suggestions to me.</span></p>
 			
 			<p style="text-align: center;"><span style="font-family:arial,helvetica,sans-serif;"><a href="https://www.youtube.com/watch?v=NO69TFMRpg8&list=PLw0pwLV8z_H8eyGVP1PNLc2DcoXm7paQ1&index=2"> See my talks about traditional sailing in Iran on YouTube (in Persian)</a></p>			
 			
